big time proxy fixxes holy

--- a/components/topbar.css
+++ b/components/topbar.css
@@ -1,5 +1,5 @@
 /* Topbar Styles - Clean & Dark */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+/* Note: Inter font is imported in main.css */
 
 body {
     margin: 0;
